project/force-app/main/default/objects/Account/fields/Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Picklist_1__c</fullName>
    <description>Picklist 1</description>
    <label>Picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>Option 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>