project/force-app/main/default/objects/Account/fields/Picklist_A__c.field-meta.xml
<CustomField>
    <fullName>Picklist_A__c</fullName>
    <label>Picklist A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option A</fullName>
            </value>
            <value>
                <fullName>Option B</fullName>
            </value>
            <value>
                <fullName>Option C</fullName>
            </value>
            <value>
                <fullName>Option D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>