project/force-app/main/default/objects/Account/recordTypes/Support_Account.recordType-meta.xml
<RecordType>
    <fullName>Support_Account</fullName>
    <active>true</active>
    <description>Support Account Desc</description>
    <label>Support Account</label>
</RecordType>