project/force-app/main/default/objects/Account/recordTypes/VIP_Customer.recordType-meta.xml
<RecordType>
    <fullName>VIP_Customer</fullName>
    <active>true</active>
    <label>VIP Customer</label>
</RecordType>